fixed Standard Deviation Chart, implemented red line for student score. Updated HighCharts Library.

--- a/Learning-Track/LearningTrack/LearningTrack/charts/standardDev.htm
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/standardDev.htm
@@ -52,8 +52,8 @@ $(function () {
 	    series: [{
 	        name: 'Scores',
 	        data: [
-                //MIN,-σ,MEAN,+σ,MAX,StudentScore
-	            [76, 80, 84, 89, 96, 88],
+                //MIN,-σ,STUDENTSCORE,+σ,MAX,AVERAGE
+	            [76, 80, 88, 89, 96, 88],
 	            [73, 85, 93, 98, 100, 88],
 	            [71, 76, 81, 87, 91, 72]
 	        ],
