fixed heatmap functionaity. implemented grouping functionality.

--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="Totoro-V1/16_980grid.css" />
 <link rel="stylesheet" href="Totoro-V1/demo.css" />
 <script type="text/javascript" src="seatfunctions.js"></script>
+<script type="text/javascript" src="highcharts/graphFunctions.js"></script>
 
 <style type="text/css">
 .menuoptions{
@@ -1122,6 +1123,7 @@ var studentsArray = queryXML();
     <div class="grid_16 intro">
         <h1 style="color: black;">Front of room</h1>
        <!-- <a onclick="document.location.reload(true);"> refresh </a> -->
+       <center><img src="highcharts/key.png"></center>
            </div>
   </div>
   <!-- END INTRO -->
