--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<center> Select Heat Map:
+ <form id="somform">
+        <select id="sample" onchange="javascript:location.href=this.value"> <!--will update the graph -->
+        </select>
+          <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups">
+  </form>
+    </center>
+  
+  
 <meta charset="utf-8" />
 <title>Morse</title>
 <link rel="stylesheet" href="Totoro-V1/reset.css" />
@@ -41,6 +50,35 @@ var studentsArray = queryXML();
 	    	document.write("<br />");
     	}
      }
+ var categoryArray = new Array();
+        categoryArray = GetCategory();
+        var categoryname;
+
+        var url1 = document.URL;
+        var path_pre = url1.split("?id=");
+        var path = path_pre[0];
+        var myselect = document.getElementById("sample");
+        categoryname = path_pre[1];
+
+        if (categoryname == null)
+        {
+                newurl = path + "?id=" + categoryArray[0].name;
+                document.location.href = newurl;
+        }
+
+        for (i = 0; i < categoryArray.length; i++) //will create the drop down based on the amount of categories that there are
+        {
+                if (categoryArray[i].name == path_pre[1]){ //if it's the category that's selected in the URL
+                        url = path + '?id=' + categoryArray[i].name;
+                        myselect.add(new Option(categoryArray[i].name, url, true, true));
+                        }
+                else
+                {
+                        //var url='standardDev.htm?cat=' + i;
+                        url = path + '?id=' + categoryArray[i].name;
+                        myselect.add(new Option(categoryArray[i].name, url));
+                }
+        }
 </script>
 
 </head>
@@ -50,13 +88,7 @@ var studentsArray = queryXML();
 <div class="container_16">
     <!-- START INTRO -->
   <div class="row">
-    <select id = "category" onchange="javascript:location.href=this.value">
-  <option name = "category" value="morse_group.html?id=homework">Homework Heat Map</option>
-  <option name = "category" value="morse_group.html?id=exam">Exam Heat Map</option>
-  <option name = "category" value="morse_group.html?id=lab">Lab Heat Map</option>
-  <option name = "category" value="morse_group.html">Morse Heat Map</option>
-  </select>
-  <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups">
+  <!--- <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups"> -->
   </div>
   <div class="row">
   <a style="none">
