--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<center> 
+Select a heat map:
+ <form id="somform">
+        <select id="sample" onchange="javascript:location.href=this.value"> <!--will update the graph -->
+        </select>
+  </form>
+  </center>
 <meta charset="utf-8" />
 <title>Morse</title>
 <link rel="stylesheet" href="Totoro-V1/reset.css" />
@@ -8,6 +15,7 @@
 <link rel="stylesheet" href="Totoro-V1/16_980grid.css" />
 <link rel="stylesheet" href="Totoro-V1/demo.css" />
 <script type="text/javascript" src="seatfunctions.js"></script>
+<script type="text/javascript" src="highcharts/graphFunctions.js"></script>
 
 <style type="text/css">
 .menuoptions{
@@ -38,6 +46,36 @@
 <script>
 var studentsArray = queryXML();
 
+        var categoryArray = new Array();
+        categoryArray = GetCategory();
+        var categoryname;
+
+        var url1 = document.URL;
+        var path_pre = url1.split("?id=");
+        var path = path_pre[0];
+        var myselect = document.getElementById("sample");
+        categoryname = path_pre[1];
+
+        if (categoryname == null)
+        {
+                newurl = path + "?id=" + categoryArray[0].name;
+                document.location.href = newurl;
+        }
+
+        for (i = 0; i < categoryArray.length; i++) //will create the drop down based on the amount of categories that there are
+        {
+                if (categoryArray[i].name == path_pre[1]){ //if it's the category that's selected in the URL
+                        url = path + '?id=' + categoryArray[i].name;
+                        myselect.add(new Option(categoryArray[i].name, url, true, true));
+                        }
+                else
+                {
+                        //var url='standardDev.htm?cat=' + i;
+                        url = path + '?id=' + categoryArray[i].name;
+                        myselect.add(new Option(categoryArray[i].name, url));
+                }
+        }
+
 </script>
 
 </head>
@@ -46,20 +84,6 @@ var studentsArray = queryXML();
 <div class="container_16">
     <!-- START INTRO -->
   <div class="row">
-    <div class="grid_16 intro">
-    	<div class="grid_4" style="background: none;">
-        	<center><a class="menuoptions" href="studio.html?id=homework"> Homework Heat Map <br /> </a></center>
-        </div>
-    	<div class="grid_4" style="background: none;">
-        	<center><a href="studio.html?id=exam" class="menuoptions"> Exam Heat Map <br /></a></center>
-    	</div>
-    	<div class="grid_4" style="background: none;">
-        	<center><a href="studio.html?id=lab" class="menuoptions"> Lab Heat Map <br /></a></center>
-    	</div>
-    	<div class="grid_4 omega" style="background: none;">
-    		<center><a href="studio.html" style="color: black; background: #E8E8E8" class="menuoptions"> Overall Heat Map <br /></a></center>
-    	</div>
-    </div>
   </div>
   
   <div class="row"><!======================== ROW 1 =============================/>
@@ -1868,6 +1892,7 @@ var studentsArray = queryXML();
   </div><!-- end .row -->
   
 
+<center><img src="highcharts/key.png"></center>
   
 
 
