--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_group.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_group.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<center> Select Heat Map:
+ <form id="somform">
+        <select id="sample" onchange="javascript:location.href=this.value"> <!--will update the graph -->
+        </select>
+          <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups">
+  </form>
+    </center>
 <meta charset="utf-8" />
 <title>Morse</title>
 <link rel="stylesheet" href="Totoro-V1/reset.css" />
@@ -8,6 +15,7 @@
 <link rel="stylesheet" href="Totoro-V1/16_980grid.css" />
 <link rel="stylesheet" href="Totoro-V1/demo.css" />
 <script type="text/javascript" src="seatfunctions.js"></script>
+<script type="text/javascript" src="highcharts/graphFunctions.js"></script>
 
 <style type="text/css">
 .menuoptions{
@@ -52,6 +60,36 @@ var studentsArray = queryXML();
 	    	document.write("<br />");
     	}
      }
+          var categoryArray = new Array();
+        categoryArray = GetCategory();
+        var categoryname;
+
+        var url1 = document.URL;
+        var path_pre = url1.split("?id=");
+        var path = path_pre[0];
+        var myselect = document.getElementById("sample");
+        categoryname = path_pre[1];
+
+        if (categoryname == null)
+        {
+                newurl = path + "?id=" + categoryArray[0].name;
+                document.location.href = newurl;
+        }
+
+        for (i = 0; i < categoryArray.length; i++) //will create the drop down based on the amount of categories that there are
+        {
+                if (categoryArray[i].name == path_pre[1]){ //if it's the category that's selected in the URL
+                        url = path + '?id=' + categoryArray[i].name;
+                        myselect.add(new Option(categoryArray[i].name, url, true, true));
+                        }
+                else
+                {
+                        //var url='standardDev.htm?cat=' + i;
+                        url = path + '?id=' + categoryArray[i].name;
+                        myselect.add(new Option(categoryArray[i].name, url));
+                }
+        }
+
 
 </script>
 
@@ -61,12 +99,7 @@ var studentsArray = queryXML();
 <div class="container_16">
     <!-- START INTRO -->
   <div class="row">
-    <select id = "category" onchange="javascript:location.href=this.value">
-  <option name = "category" value="studio_group.html?id=homework">Homework Heat Map</option>
-  <option name = "category" value="studio_group.html?id=exam">Exam Heat Map</option>
-  <option name = "category" value="studio_group.html?id=lab">Lab Heat Map</option>
-  </select>
-  <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups">
+  <!-- -- <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups"> -->
   </div>
   
   <div class="row"><!======================== ROW 1 =============================/>
@@ -2156,7 +2189,7 @@ var studentsArray = queryXML();
     
   </div><!-- end .row -->
   
-
+<center><img src="highcharts/key.png"></center>
   
 
 
