Fixed go back button. Made all menu variable to categories.

--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevGroupStudio.htm
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevGroupStudio.htm
@@ -4,7 +4,7 @@
 	<form id="somform">
 	<select id="sample" onchange="javascript:location.href=this.value"> <!--will update the graph -->
 	</select>
-		<a href="..\morse.html" style='border: 1px solid black; background:#C0C0C0; font-family:Arial,Helvetica,sans-serif; font-size: small; padding: 2px; color: black; text-decoration: none;'>Go Back</a>
+		<a href="..\studio_group.html" style='border: 1px solid black; background:#C0C0C0; font-family:Arial,Helvetica,sans-serif; font-size: small; padding: 2px; color: black; text-decoration: none;'>Go Back</a>
 	<!-- <button onclick="updateGraph();">Update</button> -->
 </form>
 
