--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse.html
@@ -94,7 +94,7 @@ var studentsArray = queryXML();
   <option value="morse.html" id="Homework">Morse Heat Map</option>
   </select>
   
-  </div>
+  </div> -->
   
   <div class="row">
   <a onclick="seatPopup('K1', studentsArray)" style="none">
