--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
@@ -5,7 +5,6 @@
  <form id="somform">
         <select id="sample" onchange="javascript:location.href=this.value"> <!--will update the graph -->
         </select>
-          <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups">
   </form>
     </center>
   
@@ -88,7 +87,7 @@ var studentsArray = queryXML();
 <div class="container_16">
     <!-- START INTRO -->
   <div class="row">
-  <!--- <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups"> -->
+   <center><input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups"></center>
   </div>
   <div class="row">
   <a style="none">
