added security layer back. Successful deserialize. Need to test matching. Updated graphics and logo

--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
@@ -87,7 +87,9 @@ var studentsArray = queryXML();
 <div class="container_16">
     <!-- START INTRO -->
   <div class="row">
-   <center><input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups"></center>
+   <center><input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups">
+   <div id="comments"></div>
+   </center>
   </div>
   <div class="row">
   <a style="none">
