--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_group.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/studio_group.html
@@ -99,7 +99,9 @@ var studentsArray = queryXML();
     <!-- START INTRO -->
   <div class="row">
   <!-- -- <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups"> -->
-   <center><input onclick="checkboxSubmitGroup(studentsArray);" type="submit" value="Compare Groups"></center>
+   <center><input onclick="checkboxSubmitGroup(studentsArray);" type="submit" value="Compare Groups">
+   <div id="comments"></div>
+   </center>
   </div>
   
   <div class="row"><!======================== ROW 1 =============================/>
