jills wonderful back up. graphs work. heat map needs to be optimized

--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse.html
@@ -32,7 +32,12 @@
 
 </style>
 <script>
+//alert('welcome to the page');
 var studentsArray = queryXML();
+//for (i = 0; i < studentsArray.length; i++)
+//{
+//	alert('name: ' + studentsArray[i].name + 'student id: ' + studentsArray[i].studentID + 'student seat: ' + studentsArray[i].seat);
+//}
  var categoryArray = new Array();
         categoryArray = GetCategory();
         var categoryname;
