--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/morse_group.html
@@ -87,8 +87,8 @@ var studentsArray = queryXML();
 <div class="container_16">
     <!-- START INTRO -->
   <div class="row">
-   <center><input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups">
-   <div id="comments"></div>
+   <center>
+   <br /> <input onclick="checkboxSubmit(studentsArray);" type="submit" value="Compare Groups"><br />
    </center>
   </div>
   <div class="row">
