--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevGroup.htm
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevGroup.htm
@@ -13,17 +13,24 @@
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 		<script type="text/javascript" src="graphFunctions.js"></script>
 		<script type="text/javascript">	
-		
+		//alert('Welcome to your shitty graphing page');
 	/* ===== QUERY THE GRADE SHEET AND GET ALL STUDENTS GRADES ======= */	
+	//alert('Next, it should query for grades');
 	var getGrades = GetGrades();
+	//alert('Congrats!! You queried grades!!');
+	//alert('Next, you should query assignments!');
 	var getAssignments = GetAssignment();
+	//alert('CONGRATS!!!!!!!!!!!!! YOU QUERIED ASSIGNMENTS!!!!!!');
 	/* ===== END OF QUERYING ==========================================*/
 	
 	/* ========= GET ALL THE CATEGORIES TO MAKE INTO THE MENU ============ */
 	var myselect = document.getElementById("sample");
 	var studentselect = document.getElementById("students");
 	var categoryArray = new Array();
+	//alert('it gets here, next it should query for categories');
 	categoryArray = GetCategory();
+	//alert('if it queried here, it should be getting categories');
+	//alert(categoryArray);
 	/* ===================================================================== */
 	
 	/* ========= GET THE PATH NAME ============ */
@@ -36,6 +43,7 @@
 	var newarray = document.URL;
 	var array1=newarray.split('group=');
 	var temp = array1[1];
+	//alert(temp);
 	var studentIDarray = temp.split(',');
 	//alert(studentIDarray[1]);
 	/* ===== END OF SPLIT ARRAY ===== */
