--- a/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevStudio.htm
+++ b/Learning-Track/LearningTrack/LearningTrack/charts/SeatingCharts/highcharts/standardDevStudio.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+	<!-- <button onclick="updateGraph();">Update</button> -->
 	<form id="somform">
 	<select id="sample" onchange="javascript:location.href=this.value"> <!--will update the graph -->
 	</select>
-		<a href="..\studio.htm" style='border: 1px solid black; background:#C0C0C0; font-family:Arial,Helvetica,sans-serif; font-size: small; padding: 2px; color: black; text-decoration: none;'>Go Back</a>
-	<!-- <button onclick="updateGraph();">Update</button> -->
+	<a href="..\studio.html" style='border: 1px solid black; background:#C0C0C0; font-family:Arial,Helvetica,sans-serif; font-size: small; padding: 2px; color: black; text-decoration: none;'>Go Back</a>
 </form>
 
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
